WIP: fix distorted back image on mobile

--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -48,9 +48,6 @@ body {
     position: absolute;
     top: 0;
     z-index: -1;
-    @include respond-to('max-width: 800px') {
-      background-position: center center;
-    }
   }
 
   .my-name,
